[gd_scene load_steps=3 format=2]

[ext_resource path="res://BasicComponents/NAND.tscn" type="PackedScene" id=1]
[ext_resource path="res://BasicComponents/OR.gd" type="Script" id=2]

[node name="OR" type="Node2D"]
script = ExtResource( 2 )

[node name="NAND" parent="." instance=ExtResource( 1 )]
position = Vector2( -124.858, -79.3697 )

[node name="NAND2" parent="." instance=ExtResource( 1 )]
position = Vector2( -122.856, 14.7365 )

[node name="NAND3" parent="." instance=ExtResource( 1 )]
position = Vector2( 40.662, -35.9874 )

[node name="Inter1" type="Line2D" parent="."]
points = PoolVector2Array( -0.495758, -53.5657, 16.172, -23.0082 )
width = 5.0
default_color = Color( 1, 0, 0, 1 )

[node name="Inter2" type="Line2D" parent="."]
points = PoolVector2Array( 2.2822, 39.6941, 16.172, 1.59651 )
width = 5.0
default_color = Color( 1, 0, 0, 1 )

[node name="Intro1_A" type="Line2D" parent="."]
points = PoolVector2Array( -167.173, -53.1688, -149.315, -67.0586 )
width = 5.0
default_color = Color( 1, 0, 0, 1 )

[node name="Intro1_B" type="Line2D" parent="."]
points = PoolVector2Array( -167.173, -53.1688, -149.315, -41.6602 )
width = 5.0
default_color = Color( 1, 0, 0, 1 )

[node name="Intro2_A" type="Line2D" parent="."]
points = PoolVector2Array( -164.395, 40.4878, -147.33, 27.3918 )
width = 5.0
default_color = Color( 1, 0, 0, 1 )

[node name="Intro2_B" type="Line2D" parent="."]
points = PoolVector2Array( -164.395, 40.4878, -146.537, 52.7902 )
width = 5.0
default_color = Color( 1, 0, 0, 1 )
